tests/ui/capture_value_span_same.stderr
error: `bind!` value and span targets must use distinct identifiers
 --> tests/ui/capture_value_span_same.rs:7:9
  |
7 |         x
  |         ^
